logica interfaz